Finished national chronicle.

--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -6,10 +6,8 @@
 			<p>Беларускай Народнай Рэспублікі</p>
 		</div>
 		<p class="intro-text">
-			Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-			aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-			pariatur
+			<span>Мабільнае прыкладанне аб фарміраванні беларускай ідэнтычнасці ў першай трэці ХХ стагоддзя. Мэта праекта з'яўляецца</span>
+			<span>візуальная рэпрэзентацыя трох адносін (нацыянальнага, савецкага і сучаснага) да аднаго і таго ж гістарычнага перыяду.</span>
 		</p>
 	</ion-content>
 </ion-view>
