Finished comments concept

--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -5,7 +5,7 @@
 		<div>
 			<ul class="list settings-options">
 				<li class="item item-toggle">
-					Опцыя 1
+					Паказваць камэнтары
 					<label class="toggle toggle-balanced">
 						<input type="checkbox">
 						<div class="track">
@@ -14,7 +14,7 @@
 					</label>
 				</li>
 				<li class="item item-toggle">
-					Опцыя 2
+					Уключыць апавяшчэнні
 					<label class="toggle toggle-balanced">
 						<input type="checkbox">
 						<div class="track">
@@ -23,34 +23,7 @@
 					</label>
 				</li>
 				<li class="item item-toggle">
-					Опцыя 3
-					<label class="toggle toggle-balanced">
-						<input type="checkbox">
-						<div class="track">
-							<div class="handle"></div>
-						</div>
-					</label>
-				</li>
-				<li class="item item-toggle">
-					Опцыя 4
-					<label class="toggle toggle-balanced">
-						<input type="checkbox">
-						<div class="track">
-							<div class="handle"></div>
-						</div>
-					</label>
-				</li>
-				<li class="item item-toggle">
-					Опцыя 5
-					<label class="toggle toggle-balanced">
-						<input type="checkbox">
-						<div class="track">
-							<div class="handle"></div>
-						</div>
-					</label>
-				</li>
-				<li class="item item-toggle">
-					Опцыя 6
+					Паказваць імя
 					<label class="toggle toggle-balanced">
 						<input type="checkbox">
 						<div class="track">
@@ -59,9 +32,6 @@
 					</label>
 				</li>
 			</ul>
-			<button class="button button-balanced settings-save">
-				Захаваць
-			</button>
 
 		</div>
 		</div>
