--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,7 @@
 	<link href="css/soviet.css" rel="stylesheet">
 	<link href="css/intro.css" rel="stylesheet">
 	<link href="css/settings.css" rel="stylesheet">
+	<link href="css/comments.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
