Fix youtube video.

--- a/www/app/chronicleDetails/chronicleDetails.html
+++ b/www/app/chronicleDetails/chronicleDetails.html
@@ -19,7 +19,7 @@
 				<i class="icon ion-chevron-up"></i>
 			</ion-pull-up-handle>
 
-			<ion-pull-up-content class="details-discuss" scroll="false">
+			<ion-pull-up-content class="details-discuss" scroll="true">
 				<div class="row">
 
 				</div>
