--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -44,7 +44,7 @@
 			<i class="icon ion-chevron-up"></i>
 		</ion-pull-up-handle>
 
-		<ion-pull-up-content class="modern-pull" scroll="false">
+		<ion-pull-up-content class="modern-pull" scroll="true">
 
 			<div ng-if="selectedPull === 1915" ng-include="'app/modern/templates/pixelate-pull.html'"></div>
 
