--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -50,7 +50,7 @@
 			<i class="icon ion-chevron-up"></i>
 		</ion-pull-up-handle>
 
-		<ion-pull-up-content class="national-pull" scroll="false">
+		<ion-pull-up-content class="national-pull" scroll="true">
 
 			<div ng-if="selectedPull === 1910" ng-include="'app/national/templates/mova-pull.html'"></div>
 
