--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
 
 	<script src="app/components/directives/morphCarousel-directive.js"></script>
 	<script src="app/components/directives/readmore-directive.js"></script>
+	<script src="app/components/directives/reloadYoutube-directive.js"></script>
 	<script src="app/components/directives/ionGallery-directive.js"></script>
 	<script src="app/components/directives/ionPullup-directive.js"></script>
 	<script src="app/components/directives/ionicSwipecards-directive.js"></script>
